# Caltech-STEM-Portfolio

./: Skull.hs  anyobject.rs
LevelGenerator/: .gitignore  Cargo.toml
LevelGenerator/src/: config_gui.rs  errors.rs  level.rs  main.rs  matrix_gen.rs  render.rs
LevelGenerator/src/algorithms/: cellular_automata.rs  mod.rs  room_placement.rs
codetutor/: .env.testing  envs.toml  pyproject.toml
osdev1/: Cargo.toml  bochs_config  bx_enh_dbg.ini
osdev1/logs/: bochs.txt
osdev1/src/bootloader/: boot.asm
