[package]
name = "LevelGenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = {version = "0.7.0", features = ["audio", "egui", "backend", "log", "glyph", "draw", "text", "extra", "links", "texture_to_file", "save_file", "clipboard", "drop_files"] }
rand = "0.8.5"
arrayref = "0.3.6"
sha2 = "0.10.6"